--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								
 							</header>
 							<div class="flex-container">
-								<div class="colum-based">
+								<div class="column-based">
 								
 								<img src="images/sravya_port.jpg" alt="sravya_chandolu" class="blob"/>
 								<div class="social-icon">
